@@ -5,6 +5,10 @@ HISTORY
 1.1rc13 (Unreleased)
 --------------------
 
+- Fix icons in image dialog listings. This closes
+  http://dev.plone.org/plone/ticket/10538
+  [davisagli]
+
 - Reset font size for tables in content.css. This fixes
   http://dev.plone.org/plone/ticket/10536
   [davisagli]
